--- a/web/package.json
+++ b/web/package.json
@@ -11,9 +11,11 @@
     ]
   },
   "dependencies": {
+    "@redwoodjs/auth-dbauth-web": "8.6.1",
     "@redwoodjs/forms": "8.6.1",
     "@redwoodjs/router": "8.6.1",
     "@redwoodjs/web": "8.6.1",
+    "humanize-string": "2.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
