--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
   },
   "devDependencies": {
     "@redwoodjs/auth-dbauth-setup": "8.6.1",
+    "@redwoodjs/cli-storybook-vite": "8.6.1",
     "@redwoodjs/core": "8.6.1",
-    "@redwoodjs/project-config": "8.6.1"
+    "@redwoodjs/project-config": "8.6.1",
+    "prettier-plugin-tailwindcss": "^0.5.12",
+    "storybook-framework-redwoodjs-vite": "^8.6.1",
+    "vite-plugin-node-polyfills": "^0.23.0"
   },
   "eslintConfig": {
     "extends": "@redwoodjs/eslint-config",
